fix: increase tech-item width for text spacing.

--- a/styles/main.css
+++ b/styles/main.css
@@ -333,8 +333,7 @@ footer {
 }
 
 .tech-item {
-  width: 8%;
-  outline: var(--second-colour) 3px solid;
+  width: 10%;
 }
 
 .tech-item-img {
